--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-	<title>mockup_app_v7_ios_VERSION2_d</title>
+	<title>mockup_app_v7_ios_debuging</title>
 	<style>
 		html {
 			height:100%;
@@ -23,8 +23,8 @@
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="mockupappv7iosversion2d_hype_container" style="margin:auto;position:relative;width:375px;height:667px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="mockup_app_v7_ios_VERSION2_d.hyperesources/mockupappv7iosversion2d_hype_generated_script.js?58030"></script>
+	<div id="mockupappv7iosdebuging_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="mockup_app_v7_ios_debuging.hyperesources/mockupappv7iosdebuging_hype_generated_script.js?22562"></script>
 	</div>
 
 	<!-- end copy -->
